fix(TaskTable): do not truncate health column heading too early in FF
Even at fullscreen, the Health column header was being truncated in Firefox

Closes: DCOS-40649

--- a/src/styles/components/task-table/styles.less
+++ b/src/styles/components/task-table/styles.less
@@ -42,7 +42,7 @@
     }
 
     &-health {
-      width: 70px;
+      width: 80px;
     }
 
     &-logs {
